--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="left">10dp</dimen>
     <dimen name="activity_vertical_margin">10dp</dimen>
     <dimen name="activity_horizontal_margin">20dp</dimen>
+    <dimen name="carview_corner_radius">4dp</dimen>
+    <dimen name="nombre_cardview">20sp</dimen>
 </resources>
