Añadido el botón like

--- a/app/src/main/res/layout/cardview_contacto.xml
+++ b/app/src/main/res/layout/cardview_contacto.xml
@@ -5,7 +5,7 @@
     android:id="@+id/cvContacto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/activity_vertical_margin"
+    android:layout_margin="@dimen/activity_vertical_margin"
     cardview:cardCornerRadius="@dimen/carview_corner_radius">
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,21 +17,44 @@
             android:id="@+id/imgFoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/imagen_contacto_margen"
             cardview:srcCompat="@drawable/shock_rave_icon" />
-
-        <TextView
-            android:id="@+id/tvNombreCV"
-            android:layout_width="wrap_content"
+        
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/pnombre"
-            android:textSize="@dimen/nombre_cardview"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvTelefonoCV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:text="@string/ptelefono" />
+            <ImageButton
+                android:id="@+id/btnLike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@android:color/transparent"
+                cardview:srcCompat="@drawable/ic_like" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tvNombreCV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pnombre"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/nombre_cardview"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvTelefonoCV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textAlignment="center"
+                    tools:text="@string/ptelefono" />
+            </LinearLayout>
+        </LinearLayout>
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
