--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.romansg.miscontactos.MainActivity">
 
-    <!--<ListView
-        android:id="@+id/lstContactos"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvContactos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/activity_horizontal_margin"/>
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
